# PlagiarismParser

./: CMakeLists.txt  main.cpp  test_1.cpp  test_2.cpp
